--- a/app/views/page/restaurant.html.erb
+++ b/app/views/page/restaurant.html.erb
@@ -14,7 +14,7 @@
 			<div id="username"><%= active_user.username %></div>
 		<% end %>
 
-		<div id="map-canvas" style="height: 300px;"></div>
+		<div id="map-canvas"></div>
 		<div class="row">
 			<div class="col-sm-6 col-sm-push-1">
 				<div class="card">
