Heavier font on restaurant thumbnails

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -524,6 +524,9 @@ label {
 	.img-rounded {
 		width: 80px;
 	}
+	.restaurant {
+		font-weight: 400;
+	}
 	.restaurant .col-xs-4 {
 		width: 110px;
 	}
