--- a/app/views/page/list.html.erb
+++ b/app/views/page/list.html.erb
@@ -17,7 +17,7 @@
 				<%= link_to 'disliked', '/dishlist/?show=disliked' %>
 			<% end %></h2>
 		<div id="content" class="dishes">
-			<h3 class="gray">Loading...</h3>
+			<h3 class="gray">Loading... <i class='fa fa-spinner fa-spin'></i></h3>
 		</div>
 	</div>
 </div>
