--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -481,6 +481,50 @@ label {
 	}
 }
 
+// user profile
+.profile {
+	border-radius: 2px;
+	background-color: #FFF;
+	border: 1px solid;
+	border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+	padding: 30px;
+	color: #999;
+	h2 {
+		margin-top: 0px;
+	}
+}
+
+.usersymbol {
+	text-shadow: 0 1px #CCC;
+	color: #5AC4B8;
+}
+
+.sm-rest-listing {
+	font-size: 0.8em;
+	padding: 8px;
+	border-bottom: 4px solid #16AB99;
+	a {
+		text-decoration: none !important;
+	}
+	&:hover {
+		background-color: #F5F5F5;
+	}
+	.listing-title {
+		display: inline-block;
+	}
+	.inline {
+		margin-left: 15px;
+		display: inline;
+	}
+}
+
+#fl-content {
+	text-align: left;
+	.dish-listing {
+		font-size: 0.98em;
+	}
+}
+
 #backbutton {
 	border: none;
 	background: none;
@@ -592,4 +636,58 @@ and (max-device-width : 568px) {
 			color: #EEE;
 		}
 	}
+}
+
+/* Curled corners 
+*	http://snipplr.com/view/52286/different-css-dropshadows/
+*/
+.drop-shadow {
+    position:relative;
+    padding:1em; 
+    margin:2em 10px 4em; 
+    background:#fff;
+}
+
+.drop-shadow:before,
+.drop-shadow:after {
+    content:"";
+    position:absolute; 
+    z-index:-2;
+}
+
+.drop-shadow p {
+    font-size:16px;
+    font-weight:bold;
+}
+
+.lifted {
+    -moz-border-radius:4px; 
+         border-radius:4px;
+}
+
+.lifted:before,
+.lifted:after { 
+    bottom:15px;
+    left:10px;
+    width:50%;
+    height:20%;
+    max-width:300px;
+    -webkit-box-shadow:0 15px 10px rgba(0, 0, 0, 0.2);   
+       -moz-box-shadow:0 15px 10px rgba(0, 0, 0, 0.2);
+            box-shadow:0 15px 10px rgba(0, 0, 0, 0.2);
+    -webkit-transform:rotate(-2deg);    
+       -moz-transform:rotate(-2deg);   
+        -ms-transform:rotate(-2deg);   
+         -o-transform:rotate(-2deg);
+            transform:rotate(-2deg);
+}
+
+.lifted:after {
+    right:10px; 
+    left:auto;
+    -webkit-transform:rotate(2deg);   
+       -moz-transform:rotate(2deg);  
+        -ms-transform:rotate(2deg);  
+         -o-transform:rotate(2deg);
+            transform:rotate(2deg);
 }
