Fixed search filter on restaurant page

--- a/app/views/page/restaurant.html.erb
+++ b/app/views/page/restaurant.html.erb
@@ -54,7 +54,7 @@
 						<h2>Popular Dishes</h2>
 					</div>
 					<div class="col-sm-6">
-						<h2><i class="fa fa-search"></i> <input class="dish-search" placeholder="search the menu"></input></h2>
+						<h2><i class="fa fa-search"></i> <input class="dish-search" placeholder="search the menu" id="menu-searcher"></input></h2>
 					</div>
 				</div>
 				<% @dishes.each do |dish| %>
